--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,9 +66,43 @@
 }
 
 .nav {
-  @apply flex bg-secondary p-2 px-4 text-lg text-white rounded-full justify-between w-full
+  @apply flex bg-secondary p-2 px-4 text-lg text-primary rounded-full justify-between w-full
 }
 
 .user-container {
   @apply flex items-center gap-1
 }
+
+.calendar {
+  @apply grid grid-cols-7 gap-1;
+}
+
+.border-dotted {
+  border-bottom: 2px dotted #718096; /* Asumiendo que #718096 es el color que deseas para el borde */
+}
+
+.calendar-cell {
+  @apply h-[24px] w-[115px];
+}
+
+.calendar-cell-dotted{
+  border: 2px solid;
+  border-bottom: 2px dotted;  /* Borde inferior punteado y azul */
+}
+
+.calendar-first-column {
+  position: relative;
+}
+
+.calendar-first-column::after {
+  content: '';
+  position: absolute;
+  top: -1px;
+  right: 0; /* Comienza desde el lado izquierdo */
+  width: 10%; /* El ancho del pseudo-elemento representa el 20% del ancho del elemento */
+  height: 2px; /* Altura del borde, ajusta según necesites */
+  background: #88868B; /* Color del borde, cambia según necesites */
+}
+
+
+
