--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #231F20;
+  background-color: #f1f1f1;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,56 +19,90 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#root {
+  margin: 0 auto;
+  text-align: center;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.btn {
+  @apply py-2 px-6 rounded-full bg-tertiary text-lg font-medium hover:bg-tertiary-light;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.background-container {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('./assets/images/banner-lowres.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: background-image 0.5s ease-in-out;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Cuando la imagen de fondo está cargada, actualiza a la imagen de alta resolución */
+.background-container.loaded {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('./assets/images/banner.webp');
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.login-container{
+  @apply flex justify-end items-center min-h-screen background-container;
 }
+
+.login-form {
+  @apply mr-[17px] p-10 flex flex-col gap-6 bg-primary rounded-3xl shadow-custom;
+}
+
+.login-title {
+  @apply text-xxl font-extrabold text-center
+}
+
+.login-buttons-container {
+  @apply grid grid-cols-2 gap-2 place-items-center
+}
+
+.svg-size-override svg {
+  @apply w-[28px] h-[28px]
+}
+
+.nav-container {
+  @apply flex gap-12 items-center px-12 mt-6
+}
+
+.nav {
+  @apply flex bg-secondary p-2 px-4 text-lg text-primary rounded-full justify-between w-full
+}
+
+.user-container {
+  @apply flex items-center gap-1
+}
+
+.calendar {
+  @apply grid grid-cols-7 gap-1;
+}
+
+.border-dotted {
+  border-bottom: 2px dotted #718096; /* Asumiendo que #718096 es el color que deseas para el borde */
+}
+
+.calendar-cell {
+  @apply h-[24px] w-[115px];
+}
+
+.calendar-cell-dotted{
+  border: 2px solid;
+  border-bottom: 2px dotted;  /* Borde inferior punteado y azul */
+}
+
+.calendar-first-column {
+  position: relative;
+}
+
+.calendar-first-column::after {
+  content: '';
+  position: absolute;
+  top: -1px;
+  right: 0; /* Comienza desde el lado izquierdo */
+  width: 10%; /* El ancho del pseudo-elemento representa el 20% del ancho del elemento */
+  height: 2px; /* Altura del borde, ajusta según necesites */
+  background: #88868B; /* Color del borde, cambia según necesites */
+}
+
+
+
