--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,4 +193,8 @@
   @apply text-center text-md text-secondary border-r border-secondary p-1
 }
 
+.schedule-box {
+  @apply w-[181px] absolute right-0 flex items-center justify-center bg-tertiary rounded-[10px] shadow-[5px_5px_5px_0_rgba(0,0,0,0.25)] transition-all duration-500
+}
+
 
