--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,9 +24,13 @@
   text-align: center;
 }
 
+/* BUTTON */
+
 .btn {
   @apply py-2 px-6 rounded-full bg-tertiary text-lg font-medium hover:bg-tertiary-light;
 }
+
+/* BACKGROUND */
 
 .background-container {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('./assets/images/banner-lowres.webp');
@@ -36,16 +40,31 @@
   transition: background-image 0.5s ease-in-out;
 }
 
-/* Cuando la imagen de fondo está cargada, actualiza a la imagen de alta resolución */
 .background-container.loaded {
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('./assets/images/banner.webp');
 }
 
-/* SELECT */
+/* CONTAINER */
+.default-container {
+  @apply w-full border-[15px] border-secondary rounded-3xl
+}
 
-.select-container {
+.input-container {
   @apply relative flex items-center justify-between h-[52px] border-[3.5px] border-secondary rounded-full text-left cursor-pointer
 }
+
+/* INPUT */
+
+.text-input {
+  @apply text-xl w-[90%] bg-primary focus:outline-none mr-2
+}
+
+.text-input::placeholder {
+  color: black;
+  opacity: 1; /* opcional, para asegurarte de que el color es completamente opaco */
+}
+
+/* SELECT */
 
 .select {
   @apply flex items-center justify-between w-full h-full pl-[23px]
@@ -53,6 +72,10 @@
 
 .expand-arrow-container svg {
   @apply w-[18px] h-[18px]
+}
+
+.plus-icon svg {
+  @apply w-[30px] h-[30px]
 }
 
 .dropdown {
@@ -89,7 +112,7 @@
 /* NAVBAR */
 
 .nav-container {
-  @apply flex gap-12 items-center px-4 mt-6 mb-[30px]
+  @apply flex gap-12 items-center mt-6 mb-[30px]
 }
 
 .nav {
@@ -114,12 +137,8 @@
   border-bottom: 1.5px dotted #718096;
 }
 
-.calendar-container {
-  @apply w-[985px] border-[15px] border-secondary rounded-3xl
-}
-
 .calendar-nav {
-  @apply flex items-center justify-between h-[50px] pl-[80px] text-md text-secondary font-bold
+  @apply flex items-center justify-between h-[50px] w-[818px] text-md text-secondary font-bold ml-[75px]
 }
 
 .calendar-talbe-container {
@@ -127,7 +146,7 @@
 }
 
 .calendar-cell {
-  @apply h-[24px] w-[124px] border-l-[1.5px] border-secondary;
+  @apply h-[24px] w-[121px] border-l-[1.5px] border-secondary;
 }
 
 .calendar-cell-dotted{
@@ -138,7 +157,7 @@
 }
 
 .calendar-first-column {
-  @apply relative h-[24px] w-[80px];
+  @apply relative h-[24px] w-[78px];
 }
 
 .calendar-last-column {
@@ -194,10 +213,39 @@
 }
 
 .schedule-box {
-  @apply w-[244px] absolute right-0 flex items-center justify-center bg-tertiary rounded-[10px] shadow-[5px_5px_5px_0_rgba(0,0,0,0.25)] transition-all duration-500
+  @apply w-[232px] absolute right-0 flex items-center justify-center bg-tertiary rounded-[10px] shadow-[5px_5px_5px_0_rgba(0,0,0,0.25)] transition-all duration-500
 }
 
 .schedule-dropdown {
   @apply overflow-auto max-h-[200px] left-[50%] w-[92%] translate-x-[-50%]
 }
 
+/* USERS */
+
+.user-panel {
+  @apply overflow-hidden bg-secondary rounded-3xl border-[15px] border-secondary
+}
+
+.user-header {
+  @apply px-6 pb-3 text-left text-[18px] text-primary font-bold
+}
+
+.user-cell {
+  @apply bg-primary pl-6 py-4 whitespace-nowrap text-[15px]
+}
+
+.last-user-cell {
+  @apply flex items-center justify-between
+}
+
+.user-panel-bottom-nav {
+  @apply w-full py-4 flex items-center justify-between bg-primary
+}
+
+.bottom-nav-button {
+  @apply flex items-center gap-1 cursor-pointer
+}
+
+.bottom-nav-page-button {
+  @apply flex justify-center items-center w-8 h-8 cursor-pointer
+}
