--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -73,6 +73,12 @@ input[type='date']::-webkit-calendar-picker-indicator {
   opacity: 1; /* opcional, para asegurarte de que el color es completamente opaco */
 }
 
+/* TEXT-AREA */
+
+.text-area {
+  @apply w-[548px] h-[218px] mt-[20px] bg-primary border-[3px] border-secondary rounded-[10px] focus:outline-none
+}
+
 /* SELECT */
 
 .select {
@@ -297,4 +303,11 @@ input[type='date']::-webkit-calendar-picker-indicator {
 
 .promotion-box {
   @apply w-[197px] h-[178px] bg-tertiary flex flex-col items-center justify-center rounded-[10px] text-[18px] cursor-pointer
+}
+
+
+/* EVIDENCE */
+
+.upload-image-label {
+  @apply flex items-center gap-2 px-[10px] py-[2px] text-secondary border-[3px] border-secondary rounded-[15px] mt-[20px] cursor-pointer
 }
