--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -205,7 +205,7 @@ input[type='date']::-webkit-calendar-picker-indicator {
 
 /* CALENDAR BOX */
 .calendar-box {
-  @apply absolute flex items-center justify-center bg-tertiary rounded-[10px] shadow-[5px_5px_5px_0_rgba(0,0,0,0.25)] font-bold
+  @apply absolute flex items-center justify-center bg-tertiary rounded-[10px] shadow-[5px_5px_5px_0_rgba(0,0,0,0.25)] font-bold px-2
 }
 
 /* SHEDULE */
