--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -284,15 +284,15 @@ input[type='date']::-webkit-calendar-picker-indicator {
 }
 
 .pop-up-container {
-  @apply w-[536px] h-[436px] absolute z-20 top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] text-xl bg-primary rounded-[15px]
+  @apply w-[536px] absolute z-20 top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] text-xl bg-primary rounded-[15px]
 }
 
 .pop-up-nav {
-  @apply relative w-full h-[114px] bg-tertiary rounded-t-[15px]
+  @apply relative w-full bg-tertiary rounded-t-[15px]
 }
 
 .pop-up-title {
-  @apply h-full flex items-center justify-center text-[25px]
+  @apply h-full flex items-center justify-center text-[25px] py-[27px]
 }
 
 .pop-up-body {
